[workspace]

[package]
name = "war2hooked"
publish = false
version = "0.0.0"
edition = "2021"

[lib]
name = "war2hook"
crate-type = ["cdylib"]

[[bin]]
name = "war2hooked"

[dependencies]
dll-syringe = { version = "0.15.2", features = ["into-x86-from-x64"] }
exe = "0.5.6"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading"
]
