[workspace]
members = ["injector", "injection"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
version = "0.0.0"
license = "NONE"

[workspace.dependencies]
dll-syringe = { version = "0.15.2", features = ["into-x86-from-x64"] }
eyre = "0.6.12"
fragile = "2.0.0"
hex = "0.4.3"
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
paste = "1.0.15"

[workspace.dependencies.windows]
version = "0.58.0"
features = [
"Win32_Foundation",
"Win32_System_Memory",
"Win32_System_SystemServices",
"Win32_System_Threading",
]
