[package]
name = "war2injection"
edition.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
eyre.workspace = true
fragile.workspace = true
iced-x86.workspace = true
paste = "1.0.15"
volatile.workspace = true
windows.workspace = true
