[package]
name = "war2injection"
edition.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
chrono = "0.4.38"
eyre.workspace = true
fragile.workspace = true
hex.workspace = true
iced-x86.workspace = true
paste.workspace = true
windows.workspace = true
