[package]
name = "war2injection"
edition.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["full"] }
eyre.workspace = true
fragile.workspace = true
hex.workspace = true
iced-x86.workspace = true
paste.workspace = true
serde = "1.0.215"
serde_json = "1.0.133"
windows.workspace = true
